--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ h1 {font-family: serif;}
     <a href="http://github.com/snarfed/huffduff-video">huffduffer-video</a>! It is great!
   </p>
   <footer>
-    <p><small>Source at <a href="https://github.com/boun/huffduffer-rss">
+    <p><small>Source at <a href="https://github.com/boun/huffduff-rss">
   github.com/snarfed/huffduffer-rss</a>.</small></p>
   </footer>
 
