--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </section>
 <br>
 <p class="warning"><em>Warning:</em> The UI is taken from
-    <a href="http://github.com/snarfed/huffduff-video">huffduffer-video</a>! It is great!
+    <a href="http://github.com/snarfed/huffduff-video">huffduffer-video</a>! The tool itself as well as the UI are great!
 </p>
 <footer>
     <p><small>Source at <a href="https://github.com/boun/huffduff-rss">
@@ -94,7 +94,7 @@
 
     const form = document.querySelectorAll("form")[0];
     form.children[2].onclick = function () {
-        rss(form.children[1].value)
+        parse(form.children[1].value)
     }
 
     function huffduff(idx) {
@@ -111,22 +111,16 @@
         return false;
     }
 
-    function rss(url) {
-        feed = [];
-
-        fetch(url)
-            .then(response => response.text())
-            .then(str => new window.DOMParser().parseFromString(str, "text/xml"))
-            .then(data => {
-                const items = data.querySelectorAll("item");
-                let html = ``;
-                items.forEach(el => {
-                    feed.push({
-                        title: el.querySelector("title").innerHTML,
-                        description: el.querySelector("description").innerHTML,
-                        url: el.querySelector("enclosure").getAttribute("url"),
-                    })
-                    html += `
+    function rss(data) {
+        const items = data.querySelectorAll("item");
+        let html = ``;
+        items.forEach(el => {
+            feed.push({
+                title: el.querySelector("title").innerHTML,
+                description: el.querySelector("description").innerHTML,
+                url: el.querySelector("enclosure").getAttribute("url"),
+            })
+            html += `
         <article>
           <h2>
             <a onclick="javascript:huffduff(${feed.length - 1});" href="#" rel="noopener">
@@ -135,9 +129,39 @@
           </h2>
         </article>
       `;
+
+        });
+        return html
+    }
+
+    async function parse(url, corsproxyfy) {
+        feed = [];
+
+        let html = `Nothing found`;
+
+        if (corsproxyfy === true)
+            url = 'https://corsproxy.io/?' + encodeURIComponent(url)
+
+        try {
+            await fetch(url)
+                .then(response => response.text())
+                .then(str => new window.DOMParser().parseFromString(str, "text/xml"))
+                .then(data => {
+                    if (data.activeElement.nodeName === 'rss') {
+                        html = rss(data)
+                    } else if (data.activeElement.nodeName === 'html') {
+                        // Better: querySelectorAll but too lazy now
+                        let feed = data.querySelector("link[type='application/rss+xml']")
+                        if (feed)
+                            html = rss(feed.href)
+                    } else {
+                        html = "<h2>Not a rss feed</h2>"
+                    }
                 });
-                document.body.insertAdjacentHTML("beforeend", html);
-            });
+        } catch (e) {
+            html = `<h2>Seems like a cors problem. <a onclick='javascript:parse(\"${url}\", true)' href='#'>Proceed?</a></h2>`
+        }
+        document.body.insertAdjacentHTML("beforeend", html);
     }
 </script>
 
