--- a/index.html
+++ b/index.html
@@ -145,8 +145,15 @@
         try {
             await fetch(url)
                 .then(response => response.text())
-                .then(str => new window.DOMParser().parseFromString(str, "text/xml"))
-                .then(data => {
+                .then(str => {
+                    let ret;
+                    try {
+                        ret = new window.DOMParser().parseFromString(str, "text/xml")
+                    } catch(e) {
+                        ret = new window.DOMParser().parseFromString(str, "text/html")
+                    }
+                    return ret;
+                }).then(data => {
                     if (data.activeElement.nodeName === 'rss') {
                         html = rss(data)
                     } else if (data.activeElement.nodeName === 'html') {
