--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         debug("parse -> url: " + url)
 
         if (corsproxyfy === true)
-            url = 'https://corsproxy.io/?' + encodeURIComponent(url)
+            url = 'https://corsproxy.io/?url=' + encodeURIComponent(url)
 
         debug("parse -> url: " + url)
 
